触发激活邮件

--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=laravel-shop
 DB_USERNAME=root
-DB_PASSWORD=xiaojiezou99Z!
+DB_PASSWORD=pzzrudlf
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
